Bug 428290 - Could not rename a quote source
Summary: Could not rename a quote source
Status: RESOLVED FIXED
Alias: None
Product: alkimia
Classification: Frameworks and Libraries
Component: Online Quotes Editor (other bugs)
Version First Reported In: 8.0.3
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-10-26 18:58 UTC by Ralf Habacker
Modified: 2020-11-12 10:02 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 8.0.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2020-10-26 18:58:04 UTC
SUMMARY


STEPS TO REPRODUCE
1. start onlinequoteseditor
2. select alkimia5 profile
3. duplicate a quote source
4. select the duplicate quote source and press F2 to rename
5. rename the quote source and press enter to save the change

OBSERVED RESULT
The changed quote source was not renamed

EXPECTED RESULT
The rename should happen


SOFTWARE/OS VERSIONS
Linux/KDE Plasma: openSUSE_Leap_15.1
KDE Frameworks Version: 5.55
Qt Version: 5.11
Comment 1 Ralf Habacker 2020-10-26 18:59:05 UTC
Git commit 90e078b0abf44eda4c21bf796d707c6da5f76dec by Ralf Habacker.
Committed on 26/10/2020 at 18:58.
Pushed by habacker into branch '8.0'.

Fix bug not been able to rename a quote source
FIXED-IN:8.0.5

M  +1    -1    src/alkonlinequoteswidget.cpp

https://invent.kde.org/office/alkimia/commit/90e078b0abf44eda4c21bf796d707c6da5f76dec
Comment 2 Ralf Habacker 2020-11-12 10:02:20 UTC
Git commit 8286fd4ec647d34f93e867bd6a2b7e86533bcdd6 by Ralf Habacker.
Committed on 12/11/2020 at 09:59.
Pushed by habacker into branch '8.0'.

Fix bug not been able to rename local quote source

The source is unique if no names were found.

M  +1    -1    src/alkonlinequoteswidget.cpp

https://invent.kde.org/office/alkimia/commit/8286fd4ec647d34f93e867bd6a2b7e86533bcdd6