Fix bug not been able to rename a quote source

BUG:428290
FIXED-IN:8.0.5